2012-03-21 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_http.c: write the whole URL, with query string by debugging.

2012-03-21 Alexander Malysh <amalysh at kannel.org>
    * gw/meta_data.h: added some defines to use for meta data.

2012-03-08  Stipe Tolj  <stolj at kannel.org>
    * gw/bb_boxc.c: fix MO routing logic implied by 'smsbox-route' context. We
      have been passing MOs that had a strict smsbox-id routing decission to
      an random not-identified smsbox if there was no smsbox-id connection.
      This breaks the MO routing criteria. Now we obey the smsbox-id routing
      decission and re-inject the MO message rather back to the main queue.
      This patchset fixes bug #633.
      
2012-03-07 Alexander Malysh <amalysh at kannel.org>
    * contrib/kannel-monitor/index.php, contrib/kannel-monitor/xmltoarray.php:
      This patch adds replaces the <? to <?php to fully support when open tags
      are not configured. This patch fixes #250.
      Thanks to Renato Jop for this patch. 

2012-02-23 Alexander Malysh <amalysh at kannel.org>
    * acinclude.m4, configure: added GIT version check

2012-02-21 Alexander Malysh <amalysh at kannel.org>
    * test/test_http_server.c: allow define custom response headers.

2012-02-15  Stipe Tolj  <stolj at kannel.org>
    * gw/smsc/smsc_http.c: inject 'text' and username variables to DLR message
      passed back to a smsbox connection. This harmonizes the behaviour to be
      similar as for the SMPP client module part.
      
2012-02-08 Alexander Malysh <amalysh at kannel.org>
    * wap/wtls_pdu.c: fixed possible segfault.
      Thanks to Armindo Antunes <armindo.antunes at gmail.com> for this patch.

2012-02-02 Alexander Malysh <amalysh at kannel.org>
    * gw/bb_smscconn.c: fixed bb_smscconn_send_failed for DLRs.

2012-01-25  Stipe Tolj  <stolj at kannel.org>
    * configure: fixing autoconf generated script from Andreas, which breaks